--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,7 @@ fabric.properties
 
 ### Python template
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*/__pycache__/
 *.py[cod]
 *$py.class
 
